[tool.poetry]
name = "deep-learning-from-scratch-5"
version = "0.1.0"
description = ""
authors = ["Shion Honda <26x.orc.ed5.1hs@gmail.com>"]
readme = "README.md"
packages = [{include = "deep_learning_from_scratch_5"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.1"
torch = "^2.4.0"
torchvision = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
